# omnivoice-triton

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  README_ko.md  batch_test_100_clone.csv  pyproject.toml  results_100_clone_step16.csv  results_clone_100.csv  results_clone_100_bucket18.csv  results_clone_100_concurrency50.csv  results_clone_100_gpu_prompt_id.csv  results_clone_100_gpu_upload.csv  results_clone_100_phase235_baseline.csv  results_clone_100_phase235_fullpatch.csv  results_clone_100_phase235_prewarm.csv  results_clone_100_phase4_full.csv  results_clone_100_phase4_full_rerun.csv  results_clone_100_phase4_light.csv  results_clone_100_phase6_full.csv  results_clone_100_phase6_max25_probe.csv  results_clone_100_phase7_replica1.csv  results_clone_100_phase7_replica2.csv  results_clone_100_phase7_replica2_locked.csv  results_clone_100_sage.csv  results_clone_single_request_clean.csv  results_clone_single_request_seq.csv  results_design_single_request_clean.csv  results_design_single_request_seq.csv
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
assets/audio_samples/: README.md  metadata.json
benchmark/: bench_e2e.py  bench_kernels.py  bench_voice_clone.py  eval_config.py  eval_quality.py  run_verification.py
benchmark/results/: e2e_benchmarks.json  kernel_benchmarks.json  tier3_fast_multi.json  verification_report.json
docs/: api_server.md  benchmark_results_en.md  benchmark_results_ko.md  clone_api_payload_guide.md  omnivoice_server_api_calls.md  repo_deep_dive.md  throughput_analysis.md
scripts/: generate_bench_tables.py  generate_samples.py  load_test_api.py  start_api.sh
src/omnivoice_triton/: __init__.py
src/omnivoice_triton/cli/: __init__.py  api_server.py
src/omnivoice_triton/kernels/: __init__.py  fused_norm_residual.py  rms_norm.py  swiglu.py  utils.py
src/omnivoice_triton/models/: __init__.py  base_runner.py  faster_runner.py  patching.py  triton_faster_runner.py  triton_runner.py
src/omnivoice_triton/serving/: __init__.py  batching.py  gpu_metrics.py  worker_lifecycle.py
tests/: test_api_server.py  test_model_parity.py
tests/kernels/: test_fused_norm.py  test_rms_norm.py  test_swiglu.py
tts/gemini_tts_clone_samples/: manifest.json
tts/omnivoice_clone_numstep_tests/all_aoede_20260417T164356Z/: README.md  manifest.json
tts/omnivoice_clone_numstep_tests/all_aoede_20260417T164356Z/ar/: README.md  manifest.json
tts/omnivoice_clone_numstep_tests/all_aoede_20260417T164356Z/da/: README.md  manifest.json
tts/omnivoice_clone_numstep_tests/all_aoede_20260417T164356Z/de/: README.md  manifest.json
tts/omnivoice_clone_numstep_tests/all_aoede_20260417T164356Z/el/: README.md  manifest.json
tts/omnivoice_clone_numstep_tests/all_aoede_20260417T164356Z/en/: README.md  manifest.json
tts/omnivoice_clone_numstep_tests/all_aoede_20260417T164356Z/es/: README.md  manifest.json
tts/omnivoice_clone_numstep_tests/all_aoede_20260417T164356Z/fi/: README.md  manifest.json
tts/omnivoice_clone_numstep_tests/all_aoede_20260417T164356Z/fr/: README.md  manifest.json
tts/omnivoice_clone_numstep_tests/all_aoede_20260417T164356Z/ur/: README.md  manifest.json
tts/omnivoice_clone_numstep_tests/en_english_aoede_20260417T160806Z/: README.md  manifest.json
ui/: __init__.py  app.py  charts.py  i18n.py  sidebar.py  tab_benchmarks.py  tab_inference.py  tab_overview.py  tab_samples.py  tab_verification.py  utils.py
ui/locales/: en.json  ko.json  zh.json
