[project]
name = "omnivoice-triton"
version = "0.1.0"
description = "Up to 3.4x faster OmniVoice inference through Triton kernel fusion and CUDA Graph optimization"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Sewon Kim" },
]
keywords = ["triton", "tts", "gpu", "omnivoice", "kernel-fusion", "inference", "cuda-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "triton>=3.4.0",
    "torch>=2.8,<2.9",
    "torchaudio>=2.8,<2.9",
    "transformers>=5.3.0",
    "accelerate",
    "fastapi",
    "soundfile",
    "numpy",
    "omnivoice>=0.1.2",
    "python-multipart",
    "sageattention",
    "uvicorn",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.4",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "ty>=0.0.1a23",
]
eval = [
    "jiwer>=3.0.0",
    "openai-whisper>=20231117",
    "resemblyzer>=0.1.3",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",
]
ui = [
    "streamlit",
    "plotly",
    "pynvml",
]
all = [
    "omnivoice-triton[dev,eval,ui]",
]

[project.urls]
Homepage = "https://github.com/newgrit1004/omnivoice-triton"
Repository = "https://github.com/newgrit1004/omnivoice-triton"
Issues = "https://github.com/newgrit1004/omnivoice-triton/issues"
Documentation = "https://github.com/newgrit1004/omnivoice-triton/tree/main/docs"

[project.scripts]
omnivoice-api = "omnivoice_triton.cli.api_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnivoice_triton"]

[tool.hatch.build.targets.sdist]
exclude = ["benchmark/results/", "benchmark/output/", "assets/"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"ui/app.py" = ["E402"]  # sys.path setup before imports (Streamlit entry point)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--cov=omnivoice_triton",
    "--cov-report=term-missing",
    "-v",
    "--ignore=tests/test_model_parity.py",
]
markers = [
    "gpu: requires CUDA GPU",
    "slow: slow tests (model loading)",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ty.rules]
# Triton @jit kernels use tl.constexpr and dynamic nn.Module patterns
# that ty cannot analyze correctly — suppress false positives.
invalid-argument-type = "ignore"
call-non-callable = "ignore"
unknown-argument = "ignore"
not-subscriptable = "ignore"
unresolved-import = "ignore"
unused-type-ignore-comment = "ignore"

[tool.coverage.run]
source = ["omnivoice_triton"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "build>=1.4.0",
    "complexipy>=5.1.0",
    "skylos>=3.1.1",
]
